tests/errors/Inconsistent1.hs
module Inconsistent1 where

{-@ incr :: Int -> Bool @-}
incr :: Int -> Int 
incr x = x + 1
